--- a/SCAPULA.html
+++ b/SCAPULA.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>scapulat</title>
+    <title>scapula</title>
 </head>
 <body>muscles attached to the scapula
    <p> <a href="WELCOME TO BIOMEDICAL ENGINEERING.html">welcome to biomedical engineering link</a></p>
